--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Roboto:ital,wght@0,300;1,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index3.css">
+    <script src="https://kit.fontawesome.com/4a9dc655f0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./resource/CSS/style.css">
+</head>
+<body>  
+   <header>
+    <div class="card">
+        <img src="./resource/img/mac 14.png" alt="">
+        <div class="sale">
+            <p>HOT</p>
+        </div>
+    </div>
+    <div class="mac">
+        <p>Macbook xịn</p>
+        <h2>Macbook Pro 14 inch 2021</h2>
+        <P>Lorem ipsum dolor sit amet adipisicing elit.  quae, <br> ab distinctio, quos cupobcaecati ut </P>
+        <hr>
+        <del>$2000</del> <span>$1999</span>
+        <div class="icon">
+            <a href=""><i class="fa-solid fa-heart"></i></a>
+            <i class="fa-solid fa-cart-shopping"></i>
+        </div>
+    </div>
+   </header>
+</body>
+</html>
+<!-- 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Roboto:ital,wght@0,300;1,100&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./resource/CSS/style.css">
@@ -20,7 +58,7 @@
         </div>
     </div>
     <div class="mac">
-        <p></p>
+        <p>Macbook xịn nhất :)</p>
         <h2>Macbook Pro 14 inch 2021</h2>
         <P>Lorem ipsum dolor sit amet adipisicing elit.  quae, <br> ab distinctio, quos cupobcaecati ut </P>
         <hr>
@@ -32,4 +70,4 @@
     </div>
    </header>
 </body>
-</html>
+</html> -->
